--- a/directive/eventHandler.html
+++ b/directive/eventHandler.html
@@ -143,6 +143,7 @@
           </iframe>
         </div>
       </div>
+      <!-- undelegate -->
       <div>事件处理指令的预定义修饰符较多，基本上都是对原生javaScript事件处理逻辑的封装。您可以根据实际需求选择合适的修饰符以简化业务代码。</div>
     </div>
   </template>
