--- a/directive/meta.html
+++ b/directive/meta.html
@@ -4,13 +4,23 @@
     <h3 class="question">什么是元指令</h3>
     <div class="answer">元指令是在宿主元素的模板解析阶段触发执行的一组指令的统称。</div>
     <h3 class="question">元指令实例列表</h3>
-    <div class="answer"><a class="margin" href="directive/raw">@raw</a><a class="margin" href="directive/dynamic">@directive</a></div>
+    <div class="answer">
+      <a class="margin" href="directive/raw">@raw</a>
+      <a class="margin" href="directive/dynamic">@directive</a>
+      <span class="margin">@slot</span>
+      <div>“@slot”元指令我们将在<a href="module/view">视图模块</a>中介绍。</div>
+    </div>
   </template>
   <template *exist="language === 'enUS'">
     <h2>Directive / Meta-Directive</h2>
     <h3 class="question">What are Meta-Directives?</h3>
     <div class="answer">meta-directives are a group of directives that are triggered during the template parsing stage of the host element.</div>
     <h3 class="question">List of Meta-Directive</h3>
-    <div class="answer"><a class="margin" href="directive/raw">@raw</a><a class="margin" href="directive/dynamic">@directive</a></div>
+    <div class="answer">
+      <a class="margin" href="directive/raw">@raw</a>
+      <a class="margin" href="directive/dynamic">@directive</a>
+      <span class="margin">@slot</span>
+      <div>"@slot" meta-directive will be introduced in the <a href="module/view">View Module</a> section.</div>
+    </div>
   </template>
 </div>
